--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hkcare",
+  "name": "closing_test_pairs",
   "version": "0.0.1",
   "private": true,
   "main": "expo-router/entry",
@@ -44,12 +44,14 @@
     "@expo/metro-runtime": "^4.0.1",
     "@gorhom/bottom-sheet": "^5.0.5",
     "@hookform/resolvers": "^3.9.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@shopify/flash-list": "1.7.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.52.1",
     "app-icon-badge": "^0.1.2",
     "axios": "^1.7.5",
     "expo": "~52.0.26",
+    "expo-apple-authentication": "^7.1.3",
     "expo-constants": "~17.0.4",
     "expo-dev-client": "~5.0.9",
     "expo-font": "~13.0.3",
@@ -81,6 +83,7 @@
     "react-native-screens": "^4.4.0",
     "react-native-svg": "~15.8.0",
     "react-native-web": "~0.19.13",
+    "react-native-webview": "^13.13.5",
     "react-query-kit": "^3.3.0",
     "tailwind-variants": "^0.2.1",
     "zod": "^3.23.8",
