--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tanstack/react-query": "^5.52.1",
     "app-icon-badge": "^0.1.2",
     "axios": "^1.7.5",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.26",
     "expo-apple-authentication": "^7.1.3",
     "expo-constants": "~17.0.4",
