--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "expo-web-browser": "~14.0.2",
     "i18next": "^23.14.0",
     "lodash.memoize": "^4.1.2",
+    "lottie-react-native": "^7.2.2",
     "moti": "^0.29.0",
     "nativewind": "^4.1.21",
     "react": "18.3.1",
