--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,19 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
+configurations.all {
+    resolutionStrategy {
+        force "androidx.browser:browser:1.6.0"
+        force "androidx.core:core:1.13.1"
+        force "androidx.versionedparcelable:versionedparcelable:1.1.1"
+        exclude group: "com.android.support"
+        exclude module: "support-v4"
+        exclude module: "support-annotations"
+        exclude module: "support-compat"
+        exclude module: "customtabs"
+    }
+}
+
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
 /**
@@ -91,8 +104,8 @@ android {
         applicationId 'com.androidclosingtestpairs.development'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "0.0.1"
+        versionCode 3
+        versionName "0.0.2"
     }
     signingConfigs {
         debug {
@@ -100,6 +113,12 @@ android {
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
+        }
+        release {
+          storeFile file('my-release-key.keystore')
+          storePassword '!2sdlfe&sU9_&3'
+          keyAlias 'my-key-alias'
+          keyPassword '!2sdlfe&sU9_&3'
         }
     }
     buildTypes {
@@ -109,7 +128,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
