--- a/package.json
+++ b/package.json
@@ -55,9 +55,12 @@
     "expo": "~52.0.26",
     "expo-apple-authentication": "^7.1.3",
     "expo-constants": "~17.0.4",
+    "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.9",
+    "expo-document-picker": "~13.0.3",
     "expo-font": "~13.0.3",
     "expo-image": "~2.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.4",
     "expo-localization": "~16.0.1",
     "expo-router": "~4.0.17",
