--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "closing_test_pairs",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
     "start": "cross-env EXPO_NO_DOTENV=1 expo start",
     "prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm expo prebuild",
     "android": "cross-env EXPO_NO_DOTENV=1 expo run:android",
+    "android:prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm add:version && pnpm expo prebuild",
+    "add:version": "node scripts/increment-version.js",
     "fix:android": "node scripts/fix-android-build.js",
     "ios": "cross-env EXPO_NO_DOTENV=1 expo run:ios",
     "web": "cross-env EXPO_NO_DOTENV=1 expo start --web",
@@ -54,6 +56,7 @@
     "dayjs": "^1.11.13",
     "expo": "~52.0.26",
     "expo-apple-authentication": "^7.1.3",
+    "expo-build-properties": "~0.13.3",
     "expo-constants": "~17.0.4",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.9",
@@ -82,6 +85,7 @@
     "react-native-edge-to-edge": "^1.1.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-google-mobile-ads": "^15.2.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-controller": "^1.13.2",
     "react-native-mmkv": "~3.1.0",
