--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "react-native-edge-to-edge": "^1.1.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-google-mobile-ads": "^15.2.0",
+    "react-native-google-mobile-ads": "14.11.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-controller": "^1.13.2",
     "react-native-mmkv": "~3.1.0",
